<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/constrain_layout">


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/box_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide" android:layout_marginRight="@dimen/margin_wide"
            app:fontFamily="@font/roboto1" android:textSize="@dimen/box_text_size" style="@style/whiteBox"
            android:id="@+id/box_one_text"/>
    <TextView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/box_two_text" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/box_one_text" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            style="@style/whiteBox" android:text="@string/box_two"/>
    <TextView
            android:text="@string/box_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" style="@style/whiteBox"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/box_two_text" app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="@dimen/margin_wide" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin_wide" app:layout_constraintVertical_chainStyle="packed"/>
    <TextView
            android:text="@string/box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" style="@style/whiteBox"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintBottom_toTopOf="@+id/textView5" app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="@dimen/margin_wide" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin_wide" android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginBottom="@dimen/margin_wide"/>
    <TextView
            android:text="@string/box_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" style="@style/whiteBox"
            app:layout_constraintBottom_toBottomOf="@+id/box_two_text"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/box_two_text"
            android:layout_marginStart="@dimen/margin_wide" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin_wide"
    />
    <TextView
            android:text="@string/how_to_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" app:fontFamily="@font/roboto1"
            android:textSize="24sp" android:layout_marginStart="24dp" app:layout_constraintStart_toStartOf="parent"
            android:textStyle="bold" android:layout_marginLeft="24dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/into_text"/>
    <TextView
            android:text="@string/tap_the_scree_and_buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/into_text" app:fontFamily="@font/roboto1"
            app:layout_constraintStart_toEndOf="@+id/textView6" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>

</androidx.constraintlayout.widget.ConstraintLayout>